--- a/public/style.css
+++ b/public/style.css
@@ -42,6 +42,7 @@
     }
 }
 
+
 @media screen and (max-width: 600px) {
 
     .med,
@@ -53,7 +54,31 @@
     footer .row {
         margin-top: 80px;
     }
+
+    .res label,
+    .res input {
+        width: 100%;
+    }
 }
+
+/*  */
+.new-btn-yellow {
+    background-color: #deb34f;
+    color: black;
+    border: 1px solid #deb34f;
+    border-radius: 4px;
+}
+
+.new-btn-yellow:hover {
+    color: black;
+    border: 1PX solid #deb34f;
+}
+
+.box-shadow {
+    box-shadow: 0px 0px 2px black;
+}
+
+/*  */
 
 body {
     box-sizing: border-box;
