--- a/public/style.css
+++ b/public/style.css
@@ -230,6 +230,8 @@ footer a {
     text-decoration: none
 }
 
+
+
 .sectiontable {
     box-shadow: 0px 0px 4px black;
 }
@@ -262,4 +264,12 @@ footer .container-fluid .row:hover {
 .sectiontable .form-control {
     background-color: white;
     border: none;
+}
+
+.login form {
+    margin: auto;
+    box-shadow: 0px 0px 2px black;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: white;
 }
